--- a/Frontend/Ecommerce/src/app/homepage/header/header.component.html
+++ b/Frontend/Ecommerce/src/app/homepage/header/header.component.html
@@ -1,5 +1,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<nav class="navbar navbar-expand ">
+<nav class="navbar navbar_Main navbar-expand  ">
+ 
+
   <!-- 1 -->
   <div class="logo_class">
     <img class="header_logo" src="../../assets/logo-3.png"><br />
@@ -20,10 +22,78 @@
     <button class="btn btn-outline-success my-2 my-sm-0 searchbtn" type="submit"><i
         class="fa fa-search search_icon"></i></button>
   </form>
-
-
-  <!-- 4 -->
   <div class="nav-icons">
+    <ng-template [ngIf]="isLoggedIn && UserType == 'Seller'" [ngIfElse]="NO">
+      <div class="row">
+        <div class="col">
+          <div ngbDropdown class="d-inline-block">
+            <button class="btn   dropdown" id="dropdownBasic1" ngbDropdownToggle>My Account</button>
+            <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+            <button ngbDropdownItem><a class="nav-link second"   (click)="AddProductModal=true" data-toggle="modal" data-target="#AddProductModal"  (click)="calling()">Sell Product</a></button>
+            <button ngbDropdownItem><a class="nav-link second" routerLink = 'CustomerOrder'>Order Details</a></button>
+            <button ngbDropdownItem><a class="nav-link second" routerLink = 'Myorder'>MyOrder</a>   
+            </button>
+            </div>
+          </div> 
+          <div ngbDropdown class="d-inline-block">
+            <div class="dropdown-settings">
+            <button class="btn   " id="dropdownBasic1" ngbDropdownToggle>
+              <a id="dropdown" href="#" class="btn">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-gear-fill" viewBox="0 0 16 16">
+                <path   d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872l-.1-.34zM8 10.93a2.929 2.929 0 1 1 0-5.86 2.929 2.929 0 0 1 0 5.858z" />
+                </svg>
+          </a></button></div>
+            <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+            <button ngbDropdownItem>
+              <a class="nav-link" (click)="logout()">LogOut</a></button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </ng-template>
+    <ng-template #NO>
+    </ng-template>
+    <ng-template [ngIf]="isLoggedIn && UserType=='Customer'" [ngIfElse]="islogin">
+      <div class="row">
+        <div class="col">
+          <div ngbDropdown class="d-inline-block">
+            <button class="btn   dropdown" id="dropdownBasic1" ngbDropdownToggle>My Account</button>
+            <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+            <button ngbDropdownItem><a class="nav-link second"  href="#" (click)="sellerregistraioModal=true" (click)="calling()" data-toggle="modal" data-target="#sellerregmodal">Sell Product</a></button>
+            <button ngbDropdownItem><a class="nav-link second" routerLink = 'Myorder'>MyOrder</a></button>
+            </div>
+          </div> 
+          <div ngbDropdown class="d-inline-block">
+            <div class="dropdown-settings">
+            <button class="btn   " id="dropdownBasic1" ngbDropdownToggle>
+              <a id="dropdown" href="#" class="btn">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-gear-fill" viewBox="0 0 16 16">
+                <path   d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872l-.1-.34zM8 10.93a2.929 2.929 0 1 1 0-5.86 2.929 2.929 0 0 1 0 5.858z" />
+                </svg>
+          </a></button></div>
+            <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+            <button ngbDropdownItem>
+              <a class="nav-link" (click)="logout()">LogOut</a></button>
+            </div>
+          </div>
+        </div>
+      </div>
+      
+    </ng-template>
+    <ng-template #islogin>
+      
+      
+    </ng-template>
+    <ng-template [ngIf]="isLoggedIn && UserType=='ADMIN'" [ngIfElse]="isloginadmin">
+      <button><a class="nav-link" (click)="logout()">LogOut</a></button>
+
+    </ng-template>
+    <ng-template #isloginadmin></ng-template>
+
+
+    <ng-template [ngIf]="!isLoggedIn" [ngIfElse]="islogin">
+
     <a class="nav-link" href="#" (click)="showModal=true" data-toggle="modal" data-target="#myModal">
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person"
         viewBox="0 0 16 16">
@@ -31,74 +101,95 @@
           d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z" />
       </svg>
     </a>
+    </ng-template>
+
+
     <a class="nav-link" href="#" routerLink="myCart"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
         class="bi bi-cart-fill" viewBox="0 0 16 16">
         <path
           d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
-      </svg></a>
-    <a id="dropdown" href="#" class="btn"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+      </svg><span class="badge badge-secondary cart_badge">{{cart_count}}</span></a>
+    
+    
+    
+    
+      <!-- <a id="dropdown" href="#" class="btn"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
         fill="currentColor" class="bi bi-gear-fill" viewBox="0 0 16 16">
         <path
           d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872l-.1-.34zM8 10.93a2.929 2.929 0 1 1 0-5.86 2.929 2.929 0 0 1 0 5.858z" />
       </svg>
-    </a>
-    <ng-template [ngIf]="isLoggedIn && UserType=='Customer'" [ngIfElse]="loggedOut">
+    </a> -->
+    <!-- <ng-template [ngIf]="isLoggedIn && UserType=='Customer'" [ngIfElse]="loggedOut"> -->
+      <!-- <div class="row ">
+        <div class="col">
+          <div ngbDropdown class="d-inline-block">
+            <div class="dropdown-settings">
+            <button class="btn btn-outline-primary " id="dropdownBasic1" ngbDropdownToggle><a id="dropdown" href="#" class="btn"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+              fill="currentColor" class="bi bi-gear-fill" viewBox="0 0 16 16">
+              <path
+                d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872l-.1-.34zM8 10.93a2.929 2.929 0 1 1 0-5.86 2.929 2.929 0 0 1 0 5.858z" />
+            </svg>
+          </a></button></div>
+            <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+            <button ngbDropdownItem>
+              <a class="nav-link" (click)="logout()">LogOut</a></button>
+            </div>
+          </div>
+        </div>
+      </div> -->
       
-      <div>
         <!-- <a class="nav-link" href="#" (click)="sellerregistraioModal=true" (click)="calling()" data-toggle="modal" data-target="#sellerregmodal">
           Sell Product</a> -->
-          <a class="nav-link" (click)="logout()">LogOut</a>
-      </div>
-    </ng-template>
-    <ng-template [ngIf]="isLoggedIn && UserType == 'Seller'" [ngIfElse]="NO">
+          
+    <!-- </ng-template> -->
+    <!-- <ng-template [ngIf]="isLoggedIn && UserType == 'Seller'" [ngIfElse]="NO"> -->
       <!-- <a class="nav-link"   (click)="AddProductModal=true" data-toggle="modal" data-target="#AddProductModal"  (click)="calling()">Sell Product</a>
       <a class="nav-link" href="#" >Order Details</a> -->
-      <a class="nav-link" (click)="logout()">LogOut</a> 
-    </ng-template>
-    <ng-template #NO>
+      <!-- <a class="nav-link" (click)="logout()">LogOut</a> 
+    </ng-template> -->
+    <!-- <ng-template #NO>
       <div>
 
       </div>
-    </ng-template>
+    </ng-template> -->
 
     
 
-    <ng-template #loggedOut>
+    <!-- <ng-template #loggedOut>
       <div>
         </div>
      
-    </ng-template>
+    </ng-template> -->
    </div>
 </nav>
-<div class="LoginNav">
-<ng-template [ngIf]="isLoggedIn && UserType=='Customer'" [ngIfElse]="loggedOut">
-      
-  <div>
-    <a class="nav-link" href="#" (click)="sellerregistraioModal=true" (click)="calling()" data-toggle="modal" data-target="#sellerregmodal">Sell Product</a>
-    <a class="nav-link" routerLink = 'Myorder'>MyOrder</a>
-      <!-- <a class="nav-link" (click)="logout()">LogOut</a> -->
-  </div>
-</ng-template>
-<ng-template [ngIf]="isLoggedIn && UserType == 'Seller'" [ngIfElse]="NO">
-  <a class="nav-link"   (click)="AddProductModal=true" data-toggle="modal" data-target="#AddProductModal"  (click)="calling()">Sell Product</a>
-  <a class="nav-link" routerLink = 'CustomerOrder'>Order Details</a>
-  <a class="nav-link" routerLink = 'Myorder'>MyOrder</a>
-  <!-- <a class="nav-link" (click)="logout()">LogOut</a>  -->
-</ng-template>
-<ng-template #NO>
-  <div>
-
-  </div>
-</ng-template>
 
 
+  <nav class="navbar navbar-expand  second-nav"> 
+      <a>
+        <div><img class="second-nav-imag" src="../../assets/catogery/0ff199d1bd27eb98.png" alt=""></div>
+        <div class="second-nav-font">Appliances</div>
+      </a>
+      <a>
+        <div><img class="second-nav-imag" src="../../assets/catogery/22fddf3c7da4c4f4.png" alt=""></div>
+        <div class="second-nav-font">Mobiles</div>
+      </a>
+      <a>
+        <div><img class="second-nav-imag" src="../../assets/catogery/69c6589653afdb9a.png" alt=""></div>
+        <div class="second-nav-font">Electronics</div>
+      </a>
+      <a>
+        <div><img  class="second-nav-imag"  src="../../assets/catogery/82b3ca5fb2301045.png" alt=""></div>
+        <div class="second-nav-font">Fashion</div>
+      </a>
+      <a>
+        <div><img class="second-nav-imag" src="../../assets/catogery/ab7e2b022a4587dd.jpg" alt=""></div>
+        <div class="second-nav-font">Home</div>
+      </a>
+    
+  </nav>
+  
 
-<ng-template #loggedOut>
-  <div>
-    </div>
- 
-</ng-template>
-</div>
+
 
 <!-- Modal Login for user-->
 
@@ -134,10 +225,11 @@
             <span class="psw">Forgot <a href="#">password?</a></span>
             <span class="createaccount"><a href="#" (click)="accountModal=true" data-toggle="modal"
                 data-target="#accountModal" (click)="showModal=false">Create A Account</a></span>
-            <!-- </div> -->
+            
           </div>
         </form>
       </div>
+    
 
       <!-- Modal footer -->
       <!-- <div class="modal-footer">
@@ -277,8 +369,17 @@
 
           <!-- <div class="container"> -->
          <label for="PCategory">Category</label>
-          <input class="registerinput" type="text" class="form-control" placeholder="Category" name="PCategory"
-            formControlName="PCategory" required>
+         <select name="registerinput" id="registerinput" formControlName="PCategory" required>
+           <option>Select..</option>
+            <option value="Mobiles">Mobiles</option>
+            <option value ="Fashion">Fashion</option>
+            <option value ="Electronics">Electronics</option>
+            <option value ="Appliances">Appliance</option>
+            <option value ="Home">Home</option>
+
+         </select>
+          <!-- <input class="registerinput" type="text" class="form-control" placeholder="Category" name="PCategory"
+            formControlName="PCategory" required> -->
 
           <label for="PName">Name</label>
           <input class="registerinput" type="textarea" class="form-control" placeholder="Name" name="PName"
