--- a/Frontend/Ecommerce/src/app/app.component.html
+++ b/Frontend/Ecommerce/src/app/app.component.html
@@ -1,8 +1,4 @@
-<!-- <app-homepage></app-homepage> -->
-
-<!-- <div class="homeDiv"> -->
-<app-header></app-header>
-<router-outlet></router-outlet>
-<app-footer></app-footer>
-<!-- </div> -->
  
+<app-header class="app_header"></app-header>
+<router-outlet></router-outlet>
+<app-footer></app-footer> 
