--- a/Frontend/Ecommerce/src/app/buy-product-page/buy-product-page.component.css
+++ b/Frontend/Ecommerce/src/app/buy-product-page/buy-product-page.component.css
@@ -2,18 +2,32 @@
     width:50%;
     height:60%;
 } */
-.image{
-    width:30%;
-    height:40%;
+.container-fluid{
+  /* margin: 0%; */
+  display: flex;
+  height: 90vh;
+  width: 100vw;
+  flex-direction: row;
+  background-color: rgb(233, 230, 230);
+  
+  /* margin-top: 6%; */
 }
- .GridPersonDetails{
-    display: grid;
-    grid-gap: 10px; 
-    padding: 10px;
- }
-
- .item1 {
-    grid-area: item1;
+.divimage{
+    width:50%;
+    height:40%;
+} 
+ 
+  .GridPersonDetails {
+    display: grid; 
+    /* border-style:outset;   */
+    grid-template-columns:25% 25% 25% 25%;
+    grid-template-rows: auto; 
+    grid-template-areas: 
+    "item3 item3 item3 item3"
+    "item1 item1 item2 item2";
+  }
+  .item1 {
+    grid-area: item1; 
   }
   .item2 {
     grid-area: item2;
@@ -21,14 +35,95 @@
     justify-content: center;
     align-items: center;
   } 
-  .GridPersonDetails {
-    display: grid;
-    grid-template-columns: 90% 10%;
+  .item3{
+  grid-area: item3;
+  background-color: rgb(128, 120, 120);
+  }
+  .GridPersonDetailsupdate{
+    display:grid;
+    grid-gap: 10px;
+    border-style: outset;
+    grid-template-columns:1  ;
     grid-template-rows: auto;
     grid-template-areas: 
-      "item1 item2";
+    "item4 " 
+    "item5  " 
+    "item6 "
+    "item7  ";
+    /* margin-left: 5%; */
+    border: none;
+    /* margin-right: 30%; */
+
   }
-  .product-details{
-      display: flex;
-      flex-direction: row;
+  .gridItem{
   }
+  .item4{
+    grid-area: item4;
+  }
+  .item5{
+    grid-area: item5;
+  }
+  .item6{
+ grid-area: item6;
+  }
+  .item7{
+    grid-area: item7;
+    color: #fff;
+    background-color: #0b5ed7;
+    border-color: #0a58ca;
+  }
+
+ 
+  .address{
+    margin-top: 3%;
+    margin-right: 2%;
+    height: fit-content;
+    width:40%;
+    margin-left: 1%; 
+    background-color: white;
+  }
+  
+
+.product-details{ 
+  margin-top: 3%;  
+  background-color: white;
+  width:65%;
+  display: flex;
+  margin-left: 2%;
+  height:fit-content;
+  flex-direction: row;
+} 
+.count{
+  width:15%;
+}
+.Parentdiv{
+  display: flex;
+  margin-left: 30%;
+  align-self: center;
+  justify-content: center; 
+}
+.quantity{
+  display:flex;
+  margin: 1%;
+}
+.Minusbtn ,.Plusbtn,.count{
+  margin: 5px;
+}
+.Minusbtn ,.Plusbtn{
+  font-weight: 800;
+}
+.button{
+  width: 12%;
+  border-radius: 9px;
+  background-color: gainsboro;
+}
+.btnAddr{
+  border: none;
+  width: 26%;
+  border-radius: 8%;
+  height: 41%;
+  outline: none;
+  color: #fff;
+  background-color: #0b5ed7;
+  border-color: #0a58ca;
+}
