--- a/Frontend/Ecommerce/src/app/my-orders/my-orders.component.css
+++ b/Frontend/Ecommerce/src/app/my-orders/my-orders.component.css
@@ -1,4 +1,9 @@
+.ImageDiv{
+    width:10%;
+    background-color: white;
+}
 .sellerimage{
-    width:30%;
-    height:50%;
+    background-color: white;
+    width : 100%;
+    height :40%; ;
 }
