--- a/Frontend/Ecommerce/src/app/my-orders/my-orders.component.html
+++ b/Frontend/Ecommerce/src/app/my-orders/my-orders.component.html
@@ -1,7 +1,7 @@
-<table class="table table-dark">
+<table class="table table-striped">
     <tbody>
         <tr *ngFor="let data of Myorder">
-            <td><img class="sellerimage" src={{APIUrl+data.ProductId.PPhoto}}></td>
+            <td class="ImageDiv"><img class="sellerimage" src={{APIUrl+data.ProductId.PPhoto}}></td>
             <td>{{data.ProductId.PName}}<br>{{data.ProductId.PDescription}}</td>
             
             <td><h5>Order Date:</h5>{{data.OrderDate}}</td>
