--- a/Frontend/Ecommerce/src/app/productcards/productcards.component.html
+++ b/Frontend/Ecommerce/src/app/productcards/productcards.component.html
@@ -15,8 +15,9 @@
     <div class="card productCard">
       <img class="card-img-top" src="{{APIUrl+listofcard.PPhoto}}" alt="Card image cap">
       <div class="card-body">
-        <h5 class="card-title">{{listofcard.PName}}</h5>
-        <p class="card-text">{{listofcard.PPrice}}</p>
+        <h4 class="card-Name">{{listofcard.PName}}</h4>
+        <h4 class="card-title">{{listofcard.PDescription | slice :0:20}}...</h4>
+        <h4 class="card-title">{{listofcard.PPrice}}</h4>
          <!-- <a href="#" class="btn btn-primary" routerLink="BuyProduct/5"  >Buy</a> -->
          <a href="#" class="btn btn-primary" [routerLink]="['BuyProduct',listofcard.ProductId ]">Buy</a>
          <!-- <a href="#" class="btn btn-primary" routerLink='BuyProduct'>Buy</a> -->
