--- a/Frontend/Ecommerce/src/app/my-orders/my-orders.component.css
+++ b/Frontend/Ecommerce/src/app/my-orders/my-orders.component.css
@@ -1,3 +1,6 @@
+.container{
+    margin-top: 10%;
+}
 .ImageDiv{
     width:10%;
     background-color: white;
@@ -6,4 +9,8 @@
     background-color: white;
     width : 100%;
     height :40%; ;
+}
+.ORDER-Empty{
+    display: flex;
+    justify-content: center;
 }
