--- a/Frontend/Ecommerce/src/app/view-product-cart/view-product-cart.component.html
+++ b/Frontend/Ecommerce/src/app/view-product-cart/view-product-cart.component.html
@@ -1,49 +1,57 @@
 <div class="container">
-    <div class="table-div">
-    <ng-template [ngIf]="cart" [ngIfElse]="NO">
-        
+   
+        <div class="table-div" *ngIf="cartList.length > 0">
             <table class="table table-borderless">
-                <tbody>
-                    <div  *ngFor="let item of cart"> 
-                        <tr>
-                            <td>
-                                <div class="image-div">
-                                    <td><img class="Sellerimage"src="{{APIUrl+item.ProductId.PPhoto}}"></td>
-                                    <div class="quantity-div">
-                                        <button class="btn-quatity">-</button>
-                                        <input class="quantity-text" type="text">
-                                        <button class="btn-quatity">+</button>
-                                    </div>
-                                </div> 
-                            </td>
-                        
-                            <td class="PDetails">
-                                
-                                    <div class="PSub">
-                                        <div>{{item.ProductId.PName}}</div>
-                                        <div>{{item.ProductId.PDescription| slice :0:10}}</div>
-                                        <div>{{item.ProductId.PPrice}}</div>
-                                        <div><button class="btn btn-danger" (click) = "deleteCartProduct(item.CartId)">Remove</button></div>
-
-                                    </div>
-                                                        
-                            </td> 
-                        
-                        </tr>
+                    <tbody>
+                        <div  *ngFor="let item of cartList"> 
+                            <tr>
+                                <td>
+                                    <div class="image-div">
+                                        <td><img class="Sellerimage"src="{{APIUrl+item.ProductId.PPhoto}}"></td>
+                                        <div class="quantity-div">
+                                            <button class="btn-quatity">-</button>
+                                            <input class="quantity-text" type="text">
+                                            <button class="btn-quatity">+</button>
+                                        </div>
+                                    </div> 
+                                </td>
                             
-                        
-                    </div>
-            
-                </tbody>
-            </table>
-            </ng-template>
-            <ng-template #NO> 
-                <h5>CART IS EMPTY</h5>
-            </ng-template>
-        
-    </div>
-    <div class="personal-details">
-        <h1>sefwer</h1>
+                                <td class="PDetails">
+                                    
+                                        <div class="PSub">
+                                            <div>{{item.ProductId.PName}}</div>
+                                            <div>{{item.ProductId.PDescription| slice :0:10}}</div>
+                                            <div>{{item.ProductId.PPrice}}</div>
+                                            <div><button class="btn btn-danger" (click) = "deleteCartProduct(item.CartId)">Remove</button></div>
 
+                                        </div>
+                                                            
+                                </td> 
+                            
+                            </tr>
+                                
+                            
+                        </div>
+                
+                    </tbody>
+            </table>
+            
+        </div> 
+        <div class="personal-details">
+            <h1>sefwer</h1>
+
+            </div>
+        
+        
+    
+
+    <div *ngIf="cartList.length === 0" >
+    <div class="emptycart">
+        <img class="img-empty" src="../../../assets/emptycart.png" alt="">
+        <h3 class="empty-cart-text">Your Cart Is Empty</h3>
+    </div>
     </div>
 </div>
+
+ 
+   
